--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- PUT YOUR NAME HERE! -->
-    <nav>Colt/Steele</nav>
+    <!-- TITLE -->
+    <nav>From Colt Steele Udemy Bootcamp</nav>
 
     <!-- Massimo Margagnoni -->
     <img
